# shapoist_request

./: Cargo.toml  README.MD
src/: io_functions.rs  lib.rs  prelude.rs
src/client/: mod.rs  prelude.rs
src/public/: command.rs  mod.rs  resource.rs  server_handle_info.rs
src/server/: mod.rs
