[package]
name = "shapoist_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.50"
reqwest = { version = "0.11.23", optional = true }
log = "0.4.20"
serde_json = "1.0.108"
md5 = "0.7.0"
sha256 = "1.5.0"
base64 = "0.21.7"
rsa = { version = "0.9.6", features = ["serde"] }
time = { version = "0.3.34", features = ["serde"] }
rand = "0.8.5"

[features]
default = []
server = []
client = ["reqwest"]